--- a/BloodDonation/Views/Finder/FinderDonors.cshtml
+++ b/BloodDonation/Views/Finder/FinderDonors.cshtml
@@ -18,7 +18,7 @@
 
     <div class="col-md-8">
         <div class="contact-form-block">
-            <h2 class="contact-title">Finded Donor</h2>
+            <h2 class="contact-title">Find Donor</h2>
             <p>
                 <div class="form-group col-md-4">
                     <label style="float: left">Select Donor Blood Group:</label>
