Pages Customization Added

--- a/BloodDonation/Views/Shared/_Layout.cshtml
+++ b/BloodDonation/Views/Shared/_Layout.cshtml
@@ -8,8 +8,8 @@
     <meta charset="utf-8">
     <title>@ViewBag.Title | Online Blood Donation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Reddrop Buddies - Blood Donation Campaign & Multi-Concept Activism Template">
-    <meta name="author" content="xenioushk">
+    <meta name="description" content="Online Blood Donation">
+    <meta name="author" content="kuvaev">
     <link rel="shortcut icon" href="../Content/Template/images/favicon.png" />
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -309,7 +309,7 @@
             <div class="container">
                 <div class="row clearfix">
                     <div class="col-md-12 col-sm-12 text-center">
-                        <p class="copyright-text"> Copyright 2018 - Blood Buddies by BlueWindLab. All Rights Reserved. </p>
+                        <p class="copyright-text"> Copyright 2022 - Kuvaev Nikita. All Rights Reserved. </p>
                     </div>  <!-- end .col-sm-6  -->
                 </div> <!-- end .row  -->
             </div> <!--  end .container  -->
