--- a/BloodDonation/Views/Home/Login.cshtml
+++ b/BloodDonation/Views/Home/Login.cshtml
@@ -10,8 +10,8 @@
     <meta charset="utf-8">
     <title>Login | Online Blood Donation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Reddrop Buddies - Blood Donation Campaign & Multi-Concept Activism Template">
-    <meta name="author" content="xenioushk">
+    <meta name="description" content="Online Blood Donation">
+    <meta name="author" content="kuvaev">
     <link rel="shortcut icon" href="../Content/Template/images/favicon.png" />
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
